# EnergyMarketsNordics

./: .env.example  .gitignore  PROJECT_OVERVIEW.html  README.md  main.py  pyproject.toml
configs/: market_params.yaml  plant_params.yaml
notebooks/: 01_fingrid_data_explorer.ipynb  02_market_prices.ipynb  03_optimizer_results.ipynb
src/assets/: hydro.py  nuclear.py  pump_hydro.py
src/bidding/: exporter.py
src/data_ingestion/: fingrid.py  forecasts.py  nordpool.py  price_forecast.py  syke.py
src/markets/: ancillary.py  elspot.py
src/optimization/: joint_optimizer.py  pump_arb_optimizer.py
src/reporting/: dashboard.py
src/utils/: schema.py  time_utils.py
tests/: test_fcr_d.py  test_fcr_n.py  test_kemijoki.py  test_optimizer.py  test_se2_optimizer.py  test_syke.py
