[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "energy-markets-nordics"
version = "0.1.0"
description = "Day-ahead and ancillary services bidding optimisation for Nordic energy markets (Finland)"
requires-python = ">=3.11"
dependencies = [
    "pyomo>=6.7",
    "highspy>=1.7",
    "pandas>=2.1",
    "numpy>=1.26",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "httpx>=0.27",
    "tenacity>=8.2",
    "pyyaml>=6.0",
    "streamlit>=1.35",
    "matplotlib>=3.8",
    "plotly>=5.20",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "ipykernel>=6.29",
]

[project.scripts]
emn = "main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
